Fixed text wrapping

--- a/src/styles/_article-link.css
+++ b/src/styles/_article-link.css
@@ -19,6 +19,10 @@
 	margin-top:0;
 }
 
+.article-link__content {
+	word-wrap: break-word;
+}
+
 @media(min-width:720px){
 	.article-link {
 		margin-bottom:50px;
