--- a/src/styles/_article-page.css
+++ b/src/styles/_article-page.css
@@ -13,4 +13,5 @@
 .article-body__content {
 	white-space: pre-line;
 	white-space: pre-wrap;
+	word-wrap: break-word;
 }
