--- a/src/styles/_body-border.css
+++ b/src/styles/_body-border.css
@@ -3,4 +3,5 @@
 	border-radius:5px;
 	padding:40px 10px;
 	margin-bottom:20px;
+	word-wrap: break-word;
 }
